# worms-cache

./: .dockerignore  .env.example  .gitignore  .python-version  LICENSE  README.md  index.yaml  initial_aphia_ids.txt  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: docker-build.yml  docker-push.yml  helm-lint.yml  helm-publish.yml  lint_tests.yml  taxamatch_build_test_push.yml
api/: __init__.py  admin.py  apps.py  schema.py
api/migrations/: 0000_enable_pg_trgm.py  0001_initial.py
api/models/: __init__.py  base.py  name_index.py  rank.py  taxon.py  vernacular.py
api/serializers/: __init__.py  name_index.py  rank.py  taxon.py  vernacular.py
api/services/: __init__.py  cache_policy.py  filters.py  ingest_aphia_id.py  rebuild_name_index.py  refresh_aphia_id.py  taxamatch_client.py  token_auth.py  worms_client.py
api/tests/: __init__.py  conftest.py  test_base.py  test_name_index.py  test_rank.py  test_taxon.py  test_taxon_get.py  test_taxon_ingest.py  test_venacular.py
api/urls/: __init__.py  base.py  name_index.py  rank.py  taxon.py  vernacular.py
api/utils/: names.py
api/views/: __init__.py  base.py  name_index.py  rank.py  taxon.py  vernacular.py
charts/: .env.example  README.md  helmfile.yaml.gotmpl  index.yaml  release-script.sh
config/: __init__.py  settings.py  urls.py
deployment/: .env.example  .gitignore  README.md  helmfile.yaml.gotmpl  release-script.sh
docker/: Dockerfile  Dockerfile.taxamatch  docker-compose.yml
docs/: API_EXAMPLES copy.md  API_EXAMPLES.md  TAXAMATCH.md
taxamatch_service/: Gemfile  app.rb  config.ru  puma.rb
(+48 files in other folders)
